# mind_rec

./: README.md  cleanup.sh  config.h.in  configure.ac
base/: Makefile.am  event_classif.cpp  event_classif.h  fitter.cpp  fitter.h  hit_clusterer.cpp  hit_clusterer.h  hit_constructor.cpp  hit_constructor.h  root2dst.cpp  root2dst.h  shower_rec.cpp
examples/: Makefile.am  fit_tracks.cpp  rec_had_show.cpp  rec_hit_test.cpp  root_2_dst.cpp  simple_smear.cpp
examples/param/: fit_cats.param
lib/: Makefile.am
util/: DeDxMap.cpp  DeDxMap.cxx  DeDxMap.h  MINDfieldMapReader.cpp  MINDfieldMapReader.h  MINDfitman.cpp  MINDfitman.h  MINDfitman.lo  MINDplotter.cpp  MINDplotter.h  MINDsetup.cpp  MINDsetup.h  Makefile  Makefile.am  SetupSk.h  Utilities.cpp  cluster.cpp  cluster.h
